# elm-asset-gen

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  elm-asset-gen.cabal
lib/: Asset.hs  Elm.hs  JS.hs  Options.hs
src/: Asset.hs  Elm.hs  JS.hs  Main.hs  Options.hs
test/: Assets.elm  Assets.js  Main.hs
