cabal-version:       >=1.10
name:                elm-asset-gen
version:             0.1.1
synopsis:            Elm asset module generator
description:         See https://github.com/tomstejskal/elm-asset-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Stejskal
maintainer:          tom@stejskal.me
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/tomstejskal/elm-asset-gen

Test-Suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4 && <5
                     , bytestring
                     , directory
                     , elm-asset-gen
                     , filepath
                     , mtl
                     , tasty
                     , tasty-golden
                     , tasty-hunit
                     , text
  hs-source-dirs:      test
  default-language:    Haskell2010

library
  exposed-modules:     Asset
                     , Elm
                     , JS
  build-depends:       base >=4 && <5
                     , bytestring
                     , directory
                     , filepath
                     , mtl
                     , text
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010

executable elm-asset-gen
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base >=4 && <5
                     , bytestring
                     , directory
                     , elm-asset-gen
                     , filepath
                     , mtl
                     , optparse-applicative
                     , text
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
  default-language:    Haskell2010

